fix(ui): sign up button overlapping dropdown menu fixed

--- a/ui/assets/css/layout.scss
+++ b/ui/assets/css/layout.scss
@@ -66,7 +66,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 10!important;
+  z-index: 10 !important;
   display: flex;
   justify-content: stretch;
   align-items: center;
@@ -131,6 +131,7 @@ img {
       min-width: 180px;
       width: 100%;
       display: none;
+      z-index: 1000;
       li {
         margin: 0;
         list-style: none;
